Fix pager alignment when csv button is hidden

--- a/src/ui/public/doc_table/doc_table.less
+++ b/src/ui/public/doc_table/doc_table.less
@@ -2,6 +2,9 @@
 
 .docTableBar {
   margin: 5px 2px;
+  .csv-button {
+    flex-grow: 1
+  }
 }
 
 /**
